# constant-propagation

./: Makefile  README.md  js.cabal
examples/: func  small
examples/expr/: expr2  expr3  expr4  var2
examples/for/: for1  for2  for3  for4  for_break  for_func  for_nested  while_func  while_nested
examples/if/: if1  if2  if3  if4  if5  if6  if_ctx1  if_ctx2  if_ctx3  if_nested
examples/programs/: prog1  prog2  prog3  prog4  prog5  prog6  prog7  prog8
examples/switch/: switch_default  switch_fallthrough  switch_multi  switch_normal  switch_simple1  switch_simple2  switch_simple3  test
examples/while/: while1  while2  while3  while4  while_break  while_break2  while_empty  while_nested  while_test1  while_test2
src/: Components.hs  Main.hs  UnitTest.hs
src/JS/: AG.ag  AG.hs  Normalize.hs
src/JS/AG/: AvailableVariables.ag  Base.ag  Desugaring.ag  Flow.ag  Folding.ag  Reconstruction.ag
src/JS/Analysis/: ConstantPropagation.hs
src/JS/Analysis/CP/: Base.hs
src/JS/Test/: ConstantFold.hs  ConstantProp.hs  Flow.hs
src/Monotone/: Framework (3rd copy).hs  Framework (4th copy).hs  Framework (5th copy).hs  Framework (6th copy).hs  Framework (7th copy).hs  Framework (another copy).hs  Framework (copy).hs  Framework.hs  Interface.hs
