name:                  js-cp
version:               0.0
synopsis:              Constant Propagation for JavaScript
description:           Project 1 Automatic Program Analysis
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.4

executable js-cp
  main-is:             Main.hs
  build-depends:       base >= 4.0, WebBits >= 2.0, fgl >= 5.4.2.3, parsec >= 2.1.0.1
                       , pretty >= 1.0.1.1, containers >= 0.3.0.0
  hs-source-dirs:      src

executable unittest
   main-is:            UnitTest.hs
   build-depends:      HUnit >= 1.2.2.3
   hs-source-dirs:     src
